kubernetes/chart/templates/express-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-nginx-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - admin-vault.frascoengineer.com
    - admin-auth.frascoengineer.com
    - api.frascoengineer.com
    - admin-grafana.frascoengineer.com
    - cert.frascoengineer.com
    secretName: unified-cert
  rules:
  - host: api.frascoengineer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: express
            port:
              number: 80
