kubernetes/chart/templates/network-policies.yaml
---
#DENY ALL INGRESS/EGRESS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
#ALLOW PROMETHEUS/GRAPHANA METRICS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: app
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
        - namespaceSelector:
            matchLabels:
              name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - namespaceSelector:
            matchLabels:
              name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus-node-exporter
        - namespaceSelector:
            matchLabels:
              name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
        - namespaceSelector:
            matchLabels:
              name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kube-state-metrics
        - namespaceSelector:
            matchLabels:
              name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: alertmanager
  policyTypes:
    - Ingress
---
# EXPRESS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: express-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: express
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/component: controller
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: keycloak
        - podSelector:
            matchLabels:
              app: app-db
    - to:                        # DNS
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
    - to:                        # Internet
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
  policyTypes:
    - Ingress
    - Egress
---
# KEYCLOAK
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: keycloak
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/component: controller
        - podSelector:
            matchLabels:
              app: express
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: app-db
        - podSelector:
            matchLabels:
              app: keycloak-db
    - to:
        - namespaceSelector: {}  # DNS
      ports:
        - protocol: UDP
          port: 53
  policyTypes:
    - Ingress
    - Egress
---
# APP-DB
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-db-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: app-db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: express
        - podSelector:
            matchLabels:
              app: keycloak
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: express
        - podSelector:
            matchLabels:
              app: keycloak
    - to:
        - namespaceSelector: {}  # DNS
      ports:
        - protocol: UDP
          port: 53
  policyTypes:
    - Ingress
    - Egress
---
# KEYCLOAK-DB
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-db-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: keycloak-db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: keycloak
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: keycloak
    - to:
        - namespaceSelector: {}  # DNS
      ports:
        - protocol: UDP
          port: 53
  policyTypes:
    - Ingress
    - Egress
